--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,java,macos,linux,intellij,jetbrains
+/project/project.iml
